--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # 서버 설정
 server.port=${SERVER_PORT:8080}
+
+# JWT 설정
+jwt.secret=${JWT_SECRET:your-secret-key-change-this-in-production-min-256-bits-for-security}
+jwt.expiration=${JWT_EXPIRATION:3600000}
