--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,48 @@
+### Java / Gradle ###
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
+
+### STS (Spring Tool Suite) ###
+.apt_generated/
+.classpath
+.factorypath
+.project
+.settings/
+.springBeans/
+.sts4-cache/
+
+### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+### VS Code ###
+.vscode/
+
+### NetBeans ###
+nbproject/private/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+### OS / System Files ###
+.DS_Store
+Thumbs.db
+
+### Env / Secrets ###
 .env
+.env.*
+*.local
+
+### Logs ###
+logs/
+*.log
+*.out
+
+### Others ###
+tmp/
