--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -28,10 +28,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+	
+	// .env 파일 지원
+	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
 	
 	// JWT 라이브러리
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
