--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,20 +1,7 @@
 spring.application.name=yu-cloudattend
 
-# 데이터베이스 설정 (환경 변수 사용)
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:attendance_db}?useSSL=${DB_USE_SSL:false}&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# .env 파일 로드
+spring.config.import=optional:file:.env[.properties]
 
-# JPA 설정
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
-spring.jpa.show-sql=${JPA_SHOW_SQL:true}
-spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:true}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# 서버 설정
-server.port=${SERVER_PORT:8080}
-
-# JWT 설정
-jwt.secret=${JWT_SECRET:your-secret-key-change-this-in-production-min-256-bits-for-security}
-jwt.expiration=${JWT_EXPIRATION:3600000}
+# 기본 프로파일 (로컬 개발 환경)
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
